--- a/src/main/resources/cssThemes/light-theme.css
+++ b/src/main/resources/cssThemes/light-theme.css
@@ -47,7 +47,7 @@
     -fx-border-width: 1px;
     -fx-border-radius: 4px;
     -fx-background-radius: 4px;
-    -fx-padding: 8px;
+    -fx-padding: 8px 4px 8px 4px;
 }
 
 /* Estilos para campos de texto personalizados */
