--- a/src/main/resources/cssThemes/dark-theme.css
+++ b/src/main/resources/cssThemes/dark-theme.css
@@ -44,6 +44,7 @@
     -fx-control-inner-background: #3c3f41;
     -fx-text-fill:#f0f0f0;
     -fx-padding: 8px;
+    -fx-padding: 8px 2px 10px 2px;
     -fx-background-color: #3c3f41;
     -fx-border-width: 1px;
     -fx-border-color: #555555;
