--- a/src/main/resources/cssThemes/dark-theme.css
+++ b/src/main/resources/cssThemes/dark-theme.css
@@ -76,6 +76,8 @@
 /* Eliminar barra de desplazamiento horizontal (solo visualmente) */
 .text-area .scroll-pane {
     -fx-hbar-policy: never;
+    -fx-vbar-policy: never;
 }
+
 
 
