--- a/src/main/resources/cssThemes/light-theme.css
+++ b/src/main/resources/cssThemes/light-theme.css
@@ -76,5 +76,7 @@
 /* Eliminar barra de desplazamiento horizontal (solo visualmente) */
 .text-area .scroll-pane {
     -fx-hbar-policy: never;
+    -fx-vbar-policy: never;
 }
+
 
