--- a/src/main/resources/cssThemes/dark-theme.css
+++ b/src/main/resources/cssThemes/dark-theme.css
@@ -1,17 +1,17 @@
 /* dark-theme.css */
 
-/* Fuente base para toda la aplicación */
+/*mainDarkTheme*/
 .root {
     -fx-font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     -fx-font-size: 12px;
     -fx-background-color: #2b2b2b;
 }
 
-/* Estilos para botones */
+/*botones*/
 .button {
     -fx-background-color: #3c3f41;
     -fx-text-fill: #e0e0e0;
-    -fx-font-size: 13px;
+    -fx-font-size: 12px;
     -fx-border-color: #555555;
     -fx-border-width: 1px;
     -fx-border-radius: 5px;
@@ -33,26 +33,35 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 4, 0, 0, 2);
 }
 
-/* Estilos para etiquetas personalizadas */
+/*etiquetas*/
 .custom-label {
     -fx-text-fill: #e0e0e0;
     -fx-font-weight: bold;
 }
-
-/* Estilos para áreas de texto personalizadas */
-.custom-text-area {
-    -fx-control-inner-background: #3c3f41;
-    -fx-text-fill: lightgray;
-    -fx-border-color: lightgray;
-    -fx-text-fill:#f0f0f0;
-    -fx-padding: 8px;
-    -fx-padding: 8px 2px 10px 2px;
-    -fx-background-color: #3c3f41;
-    -fx-border-width: 1px;
-    -fx-border-color: #555555;
+.custom-label1 {
+    -fx-background-color: rgba(60, 63, 65, 1);
+    -fx-padding: 3 10 3 10;
+    -fx-alignment: center;
+    -fx-border-color: rgba(224, 224, 224, 0.6);
+    -fx-text-fill: #f0f0f0;
+    -fx-border-width: 2px;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
 }
 
-/* Estilos para campos de texto personalizados */
+
+.custom-text-area {
+    -fx-background-color: rgba(60, 63, 65, 0.9);
+    -fx-control-inner-background: rgba(60, 63, 65, 0.9);
+    -fx-text-fill: #e0e0e0;
+    -fx-border-color: #666666;
+    -fx-border-width: 1px;
+    -fx-border-radius: 4px;
+    -fx-background-radius: 4px;
+    -fx-padding: 8px 2px 10px 2px;
+}
+
+/*textField*/
 .custom-text-field {
     -fx-background-color: #3c3f41;
     -fx-text-fill: #c0c0c0;
@@ -75,11 +84,44 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,170,255,0.3), 4, 0, 0, 2);
 }
 
-/* Eliminar barra de desplazamiento horizontal (solo visualmente) */
+/*eliminar barra de desplazamiento horizontal (visual) */
 .text-area .scroll-pane {
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
+
 }
+
+
+/*gráfico*/
+.axis-label, .chart-title{
+    -fx-text-fill: #e0e0e0;
+}
+
+.chart {
+    -fx-background-color: #2b2b2b;
+    -fx-background-insets: 0;
+}
+
+.chart-plot-background {
+    -fx-background-color: #3c3f41;
+}
+
+.chart-legend {
+    -fx-background-color: #3c3f41;
+    -fx-text-fill: #e0e0e0;
+}
+.chart-legend-item {
+    -fx-text-fill: #e0e0e0;
+}
+.axis {
+    -fx-tick-label-fill: #e0e0e0;
+}
+.chart-horizontal-grid-lines, .chart-vertical-grid-lines {
+    -fx-stroke: rgba(96, 96, 96, 0.7); /* Gris más opaco para las líneas de cuadrícula */
+}
+
+
+
 
 
 
