--- a/src/main/resources/cssThemes/light-theme.css
+++ b/src/main/resources/cssThemes/light-theme.css
@@ -4,7 +4,7 @@
 .root {
     -fx-font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     -fx-font-size: 12px;
-    -fx-background-color: #f4f4f4; /* Fondo ligeramente gris para suavizar el blanco */
+    -fx-background-color: #f4f4f4;
 }
 
 /* Estilos para botones */
@@ -38,6 +38,15 @@
     -fx-text-fill: #333333;
     -fx-font-weight: bold;
 }
+.custom-label1 {
+    -fx-background-color: white;
+    -fx-padding: 3 10 3 10;-fx-alignment: center;
+    -fx-border-color: #e0e0e0;
+    -fx-border-width: 4px;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+}
+
 
 /* Estilos para áreas de texto personalizadas */
 .custom-text-area {
