--- a/src/main/resources/cssThemes/light-theme.css
+++ b/src/main/resources/cssThemes/light-theme.css
@@ -9,28 +9,33 @@
 
 /* Estilos para botones */
 .button {
-    -fx-background-color: #ffffff;
+    -fx-background-color: linear-gradient(to bottom, #ffffff, #f8f8f8);
     -fx-text-fill: #333333;
-     -fx-font-size: 12px;
+    -fx-font-size: 12px;
     -fx-border-color: #cccccc;
     -fx-border-width: 1px;
     -fx-border-radius: 5px;
     -fx-background-radius: 5px;
     -fx-padding: 8px 16px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 2, 0, 0, 1);
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 3, 0.0, 0, 1),
+                innershadow(three-pass-box, rgba(255,255,255,0.8), 1, 0.0, 0, 1);
     -fx-cursor: hand;
     -fx-font-weight: bold;
-    -fx-transition: background-color 0.3s, text-fill 0.3s;
+    -fx-transition: all 0.2s ease-in-out;
 }
 
 .button:hover {
-    -fx-background-color: #e6e6e6;
+    -fx-background-color: linear-gradient(to bottom, #f8f8f8, #f0f0f0);
     -fx-text-fill: #000000;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.15), 4, 0.0, 0, 1),
+                innershadow(three-pass-box, rgba(255,255,255,0.9), 1, 0.0, 0, 1);
+    -fx-translate-y: -1px;
 }
 
 .button:pressed {
-    -fx-background-color: #d4d4d4;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 4, 0, 0, 2);
+    -fx-background-color: linear-gradient(to bottom, #e6e6e6, #eeeeee);
+    -fx-effect: innershadow(three-pass-box, rgba(0,0,0,0.15), 4, 0.0, 0, 0);
+    -fx-translate-y: 1px;
 }
 
 /* Estilos para etiquetas personalizadas */
@@ -40,9 +45,9 @@
 }
 .custom-label1 {
     -fx-background-color: white;
-    -fx-padding: 3 10 3 10;-fx-alignment: center;
+    -fx-padding: 3 10 4 10;-fx-alignment: center;
     -fx-border-color: #e0e0e0;
-    -fx-border-width: 4px;
+    -fx-border-width: 3px;
     -fx-background-radius: 4px;
     -fx-border-radius: 4px;
 }
@@ -56,8 +61,9 @@
     -fx-border-width: 1px;
     -fx-border-radius: 4px;
     -fx-background-radius: 4px;
-    -fx-padding: 8px 2px 10px 2px;
+    -fx-padding: 0px 2px 10px 2px;
 }
+
 
 /* Estilos para campos de texto personalizados */
 .custom-text-field {
