--- a/src/main/resources/cssThemes/dark-theme.css
+++ b/src/main/resources/cssThemes/dark-theme.css
@@ -128,6 +128,51 @@
 }
 
 
+/* Submenú Ajustes*/
+.context-menu {
+    -fx-background-color: #3c3f41;
+    -fx-border-color: #555555;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 8px;
+    -fx-padding: 3px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 4, 0.0, 0, 1);
+}
+
+.menu-item {
+    -fx-background-color: transparent;
+    -fx-border-radius: 4px;
+}
+
+.menu-item .label {
+    -fx-text-fill: #dcdcdc;
+    -fx-font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font-size: 12px;
+    -fx-padding: 5px 10px;
+}
+
+.menu-item:hover {
+    -fx-background-color: #4a4a4a;
+    -fx-border-radius: 4px;
+}
+
+.menu-item:hover .label {
+    -fx-text-fill: #ffffff;
+}
+
+.menu-item:focused {
+    -fx-background-color: #555555;
+}
+
+.menu-item:focused .label {
+    -fx-text-fill: #ffffff;
+}
+.menu-item .label {
+    -fx-padding: 5px 10px;
+    -fx-background-radius: 4px;
+}
+
+
 
 
 
